[tool.poetry]
name = "multicast_expert"
version = "1.3.0"
description = "A library to take the fiddly parts out of multicast networking!"
authors = ["Jamie Smith <jsmith@crackofdawn.onmicrosoft.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/multiplemonomials/multicast_expert"

[tool.poetry.dependencies]
python = "^3.8" # Need Python 3.8 for socket.IPPROTO_IPV6
netifaces = "0.*"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
